src/objects/SNI_FL_Care_Team_Member__c.object
<CustomObject>
    <description>This Object is created for SNI Family Link Portal to save the care team members</description>
    <fields>
        <fullName>Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SNI_FL_Added_Date__c</fullName>
        <description>This field holds the date of the member added to the Family Link Portal</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Added Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SNI_FL_Authorized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check box is to defines the authorization status of ROI</description>
        <label>Authorized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SNI_FL_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the family account related to care team member</description>
        <label>Family</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Care Team</relationshipLabel>
        <relationshipName>SNI_FL_CareTeam_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SNI_FL_Invited_Date__c</fullName>
        <description>This field holds the family Member Invited Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Invited Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SNI_FL_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field holds the person Account related to the care team member</description>
        <label>Member</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Care Team(Member)</relationshipLabel>
        <relationshipName>SNI_FL_CareTeam_Members1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SNI_FL_Non_Policy_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This fields holds the value whether the member is from the policy or not</description>
        <label>Non-Policy Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SNI_FL_Not_Visible_in_Familylink__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This fields gets checked when a member is to be removed from the care team and not visible in the family link</description>
        <label>Not Visible in Care Advisor Connect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SNI_FL_Primary_Caregiver__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field holds the value whether the member is the Primary Caregiver(Family Link Account Owner)</description>
        <label>Family Account Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SNI_FL_Registered_Date__c</fullName>
        <description>This field holds the registered date of the care team member</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Registered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SNI_FL_Removed_Date__c</fullName>
        <description>This field holds the date when the member is removed from the care team</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Removed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SNI_FL_Status__c</fullName>
        <description>This hold the status of the care team member</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Added</fullName>
                </value>
                <value>
                    <fullName>Invited</fullName>
                </value>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SNI FL Care Team Member</label>
    <nameField>
        <displayFormat>CT - {00000}</displayFormat>
        <label>CareTeam Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Care Team</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>